--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^14.2.5",
     "@supabase/supabase-js": "^2.39.3",
-    "framer-motion": "^11.0.5"
+    "framer-motion": "^11.0.5",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
+    "@eslint/eslintrc": "^3.3.3",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.17",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5"
+    "typescript": "^5.4.5"
   }
 }
